<resources>
    <string name="app_name">Food Ordering System</string>
    <string name="edit">Edit</string>
    <string name="edit1">Edit</string>
    <string name="delete_card">Delete Card</string>
    <string name="add_card">Add Card</string>
    <string name="pay">Pay</string>
    <string name="edit_card">Edit Card</string>
    <string name="expire_date">Expire Date</string>
    <string name="confirm_edit">Confirm Edit</string>
    <string name="back">Back</string>
    <string name="card_number">Card Number</string>
    <string name="confirm_delete">Confirm Delete</string>
    <string name="cancel">Cancel</string>
    <string name="button">Button</string>
    <string name="cvv">Cvv</string>
    <string name="visa">Visa</string>
    <string name="master">Master</string>
    <string name="confirm_add">Confirm Add</string>
    <string name="title_activity_slide_bar">Slide_Bar</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>

    <string name="menu_home">Home</string>
    <string name="menu_gallery">Gallery</string>
    <string name="menu_slideshow">Slideshow</string>
    <string name="title_activity_login">LoginActivity</string>
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password</string>
    <string name="action_sign_in">Sign in or register</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="welcome">"Welcome !"</string>
    <string name="invalid_username">Not a valid username</string>
    <string name="invalid_password">Password must be >5 characters</string>
    <string name="login_failed">"Login failed"</string>

    <string name="comp_name">Royal Foods</string>
    <string name="app_des">Food Delivery App</string>
    <string name="order_eat"><![CDATA[Order & Eat]]></string>


</resources>