<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/pay_btn"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:visibility="visible"
    tools:context=".PaymentHome">

    <Button
        android:id="@+id/edit1"
        android:layout_width="231dp"
        android:layout_height="46dp"
        android:layout_marginTop="16dp"
        android:background="@drawable/round_main"
        android:text="Edit"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/list_view" />

    <TextView
        android:id="@+id/textView"
        android:layout_width="180dp"
        android:layout_height="56dp"
        android:layout_marginTop="24dp"
        android:text="Previous Card"
        android:textSize="24sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.562"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <Button
        android:id="@+id/conf_pay_feed"
        android:layout_width="247dp"
        android:layout_height="51dp"
        android:layout_marginTop="12dp"
        android:background="@drawable/round_pay"
        android:text="@string/pay"
        android:textColor="#FFFFFF"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.542"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/imageView3" />

    <Button
        android:id="@+id/add_btn"
        android:layout_width="231dp"
        android:layout_height="46dp"
        android:layout_marginTop="76dp"
        android:background="@drawable/round_main"
        android:text="@string/add_card"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.494"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/list_view" />

    <Button
        android:id="@+id/delete_btn"
        android:layout_width="232dp"
        android:layout_height="43dp"
        android:layout_marginTop="16dp"
        android:background="@drawable/round_main"
        android:text="@string/delete_card"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.497"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/add_btn" />

    <ImageView
        android:id="@+id/imageView3"
        android:layout_width="261dp"
        android:layout_height="161dp"
        android:layout_marginTop="24dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/delete_btn"
        app:srcCompat="@drawable/png_clipart_credit_card_logo_encapsulated_postscript_visa_eps_blue_cdr_removebg_preview" />

    <TextView
        android:id="@+id/Youhave"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="32dp"
        android:text="You added x cards "
        android:textSize="18dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.498"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/delete_btn" />

    <ListView
        android:id="@+id/list_view"
        android:layout_width="214dp"
        android:layout_height="49dp"
        android:layout_marginTop="20dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView" />

</androidx.constraintlayout.widget.ConstraintLayout>